--- a/app/src/main/res/layout/activity_view_categories.xml
+++ b/app/src/main/res/layout/activity_view_categories.xml
@@ -24,15 +24,8 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="match_parent"
         android:id="@android:id/list"
         />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:text="@string/add_new"
-        android:id="@+id/addc"
-        android:onClick="addCategory"/>
 </LinearLayout>
