--- a/app/src/main/res/menu/view_expenses.xml
+++ b/app/src/main/res/menu/view_expenses.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.simgeoapps.expensereport.ViewExpenses" >
+    <item android:id="@+id/action_new"
+        android:title="@string/add"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
