--- a/app/src/main/res/layout/activity_view_categories.xml
+++ b/app/src/main/res/layout/activity_view_categories.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:id="@+id/catMon" />
 
     <View
         android:layout_width="match_parent"
