--- a/app/src/main/res/menu/view_categories.xml
+++ b/app/src/main/res/menu/view_categories.xml
@@ -5,8 +5,8 @@
         android:title="@string/add"
         android:orderInCategory="1"
         android:showAsAction="ifRoom" />
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/switch_user"
+        android:title="@string/swi"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
