--- a/app/src/main/res/layout/activity_view_categories.xml
+++ b/app/src/main/res/layout/activity_view_categories.xml
@@ -23,6 +23,19 @@
         android:layout_marginBottom="10dp"
         android:background="#ff000000" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:id="@+id/monYTot" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginBottom="10dp"
+        android:background="#ff000000" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
