--- a/app/src/main/res/menu/context_categories.xml
+++ b/app/src/main/res/menu/context_categories.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.simgeoapps.expensereport.ViewCategories">
     <item android:id="@+id/action_edit"
+        android:icon="@drawable/ic_action_edit"
         android:title="@string/edi"
         android:orderInCategory="1"
         android:showAsAction="ifRoom" />
     <item android:id="@+id/action_del"
+        android:icon="@drawable/ic_action_discard"
         android:title="@string/del"
         android:orderInCategory="2"
         android:showAsAction="ifRoom" />
