--- a/app/src/main/res/menu/view_categories.xml
+++ b/app/src/main/res/menu/view_categories.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.simgeoapps.expensereport.ViewCategories" >
     <item android:id="@+id/action_new"
+        android:icon="@drawable/ic_action_new"
         android:title="@string/add"
         android:orderInCategory="1"
         android:showAsAction="ifRoom" />
