--- a/app/src/main/res/layout/activity_enter_expense.xml
+++ b/app/src/main/res/layout/activity_enter_expense.xml
@@ -34,11 +34,10 @@
             android:textSize="30sp" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textSize="30sp"
-            android:hint="@string/cost_eg"
-            android:inputType="numberDecimal" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <TextView
