--- a/app/src/main/res/menu/context_expenses.xml
+++ b/app/src/main/res/menu/context_expenses.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.simgeoapps.expensereport.ViewExpenses">
+    <item android:id="@+id/action_edit"
+        android:icon="@drawable/ic_action_edit"
+        android:title="@string/edi"
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom" />
     <item android:id="@+id/action_del"
         android:icon="@drawable/ic_action_discard"
         android:title="@string/del"
